--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -12,6 +12,7 @@ builds:
     goos:
       - linux
       - darwin
+      - windows
     goarch:
       - amd64
       - arm
@@ -20,24 +21,7 @@ builds:
       - "6"
       - "7"
     # dir: src
-    id: lin
-    hooks:
-      post:
-        - upx "{{ .Path }}"
-  - env:
-      - CGO_ENABLED=0
-    ldflags:
-      - -X main.version={{.Version}}
-    goos:
-      - windows
-    goarch:
-      - amd64
-      - arm
-    goarm:
-      - "6"
-      - "7"
-    # dir: src
-    id: win
+    id: ekspodlogs
 
 archives:
   - name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
