--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,3 +1,4 @@
+version: 2
 before:
   hooks:
     # You may remove this if you don't use go modules.
@@ -29,8 +30,6 @@ archives:
 
 checksum:
   name_template: 'checksums.txt'
-snapshot:
-  name_template: "{{ .Tag }}"
 changelog:
   sort: asc
   filters:
