--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -2,7 +2,7 @@ version: 2
 before:
   hooks:
     # You may remove this if you don't use go modules.
-    - go get
+    - go mod download
     # you may remove this if you don't need go generate
     #- go generate ./...
 builds:
@@ -13,7 +13,6 @@ builds:
     goos:
       - linux
       - darwin
-      - windows
     goarch:
       - amd64
       - arm
