--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -4,24 +4,19 @@ before:
     # You may remove this if you don't use go modules.
     - go mod download
     # you may remove this if you don't need go generate
-    #- go generate ./...
+    - sqlc generate
 builds:
   - env:
-      - CGO_ENABLED=0
+      - CGO_ENABLED=1
     ldflags:
       - -X main.version={{.Version}}
     goos:
       - linux
-      - darwin
     goarch:
       - amd64
-      - arm
-      - arm64
-    goarm:
-      - "6"
-      - "7"
     # dir: src
     id: ekspodlogs
+
 
 archives:
   - name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
