--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,10 +1,8 @@
 version: 2
 before:
   hooks:
-    # You may remove this if you don't use go modules.
     - go mod download
-    # you may remove this if you don't need go generate
-    - sqlc generate
+    - go generate ./...
 builds:
   - env:
       - CGO_ENABLED=1
