--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Install Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '>=1.24'
+
       - name: Install devbox
         uses: jetify-com/devbox-install-action@v0.12.0
         with:
