feat: replace devbox with go-task in release and snapshot workflows

--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -22,12 +22,9 @@ jobs:
         with:
           go-version: '>=1.24'
 
-      - name: Install devbox
-        uses: jetify-com/devbox-install-action@v0.12.0
-        with:
-          enable-cache: true
-          devbox-version: 0.14.0
-  
+      - name: Install go-task
+        run: sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d
+        
       -
         # Add support for more platforms with QEMU (optional)
         # https://github.com/docker/setup-qemu-action
@@ -44,11 +41,10 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install prerequisites
+      - name: Create snapshot
         shell: /usr/bin/bash {0}
         run: |
-          devbox install
-          devbox run snapshot
+          task snapshot
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           # Your GoReleaser Pro key, if you are using the 'goreleaser-pro' distribution
