--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,12 +25,9 @@ jobs:
         with:
           go-version: '>=1.24'
 
-      - name: Install devbox
-        uses: jetify-com/devbox-install-action@v0.12.0
-        with:
-          enable-cache: true
-          devbox-version: 0.14.0
-
+      - name: Install go-task
+        run: sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d
+  
       -
         # Add support for more platforms with QEMU (optional)
         # https://github.com/docker/setup-qemu-action
@@ -47,11 +44,10 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install prerequisites
+      - name: Create release
         shell: /usr/bin/bash {0}
         run: |
-          devbox install
-          devbox run release
+          task release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           # Your GoReleaser Pro key, if you are using the 'goreleaser-pro' distribution
