--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,9 +25,12 @@ jobs:
         with:
           go-version: '>=1.24'
 
-      - name: Install go-task
-        run: sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d
-  
+      - name: Install Task
+        uses: arduino/setup-task@v2
+        with:
+          version: 3.x # or a specific version like 3.32.0
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+
       -
         # Add support for more platforms with QEMU (optional)
         # https://github.com/docker/setup-qemu-action
