--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,11 @@ jobs:
           version: 3.x # or a specific version like 3.32.0
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Install GoReleaser
+        uses: goreleaser/goreleaser-action@v6
+        with:
+          install-only: true
+  
       -
         # Add support for more platforms with QEMU (optional)
         # https://github.com/docker/setup-qemu-action
